kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: formflow
  labels:
    name: formflow
