kubernetes/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: formflowapi
  namespace: formflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: formflowapi
  template:
    metadata:
      labels:
        app: formflowapi
    spec:
      containers:
      - name: formflowapi-container
        image: todorovamonika/formflow-backend:latest
        ports:
        - containerPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: formflowfront
  namespace: formflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: formflowfront
  template:
    metadata:
      labels:
        app: formflowfront
    spec:
      containers:
        - name: formflowfront
          image: todorovamonika/formflow-frontend:latest
          ports:
            - containerPort: 8080
