kubernetes/services.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: formflow
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 9090
  type: LoadBalancer

---

apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: formflow
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer

---

apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: formflow
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
