kubernetes/storage.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysqldb
  namespace: formflow
spec:
  serviceName: mysqlserverdb-service
  replicas: 1
  selector:
    matchLabels:
      app: mysqlserver
      apps.kubernetes.io/pod-index: "0"
      controller-revision-hash: mysqldb-69fcfdb46d
      statefulset.kubernetes.io/pod-name: mysqldb-0
  template:
    metadata:
      labels:
        app: mysqlserver
        apps.kubernetes.io/pod-index: "0"
        controller-revision-hash: mysqldb-69fcfdb46d
        statefulset.kubernetes.io/pod-name: mysqldb-0
    spec:
      containers:
      - name: mysqlserver
        image: mysql:latest
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi

---

apiVersion: v1
kind: Service
metadata:
  name: mysqlserverdb-service
  namespace: formflow
spec:
  type: LoadBalancer
  selector:
    app: mysqlserver
  ports:
  - port: 3306
    protocol: TCP
    name: mysql
